fixed 2px gap above searchbox in IE6
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22805

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -109,6 +109,7 @@ ul.navigation li a.active {
 
 #search {
 	float: right;
+	position: relative;
 	background: url(images/search-wrapper.png) no-repeat;
 	height: 20px;
 	padding: 10px 25px;
